--- a/src/and_so_it_goes.tex
+++ b/src/and_so_it_goes.tex
@@ -5,7 +5,7 @@
     index={andsoitgoes}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad And so it goes --- Billy Joel}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{And so it goes} --- Billy Joel}
 
     \label{andsoitgoes}
 
