--- a/src/backinthehighlife.tex
+++ b/src/backinthehighlife.tex
@@ -5,7 +5,7 @@
     index={backinthehighlife}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Back in the high life --- Steve Winwood}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Back in the high life} --- Steve Winwood}
 
     \label{backinthehighlife}
 
