--- a/src/blowinginthewind.tex
+++ b/src/blowinginthewind.tex
@@ -5,7 +5,7 @@
     index={blowinginthewind}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Blowing in the Wind - Bob Dylan}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Blowing in the Wind} --- Bob Dylan}
 
     \label{blowinginthewind}
 
