--- a/src/buenastardesamigo.tex
+++ b/src/buenastardesamigo.tex
@@ -5,7 +5,7 @@
     index={buenastardesamigo}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Buenas Tardes Amigo --- Ween}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Buenas Tardes Amigo} --- Ween}
 
     \label{buenastardesamigo}
 
