--- a/src/dasbierichinderrechtentrug.tex
+++ b/src/dasbierichinderrechtentrug.tex
@@ -5,7 +5,7 @@
     index={dasbierichinderrechtentrug}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Das Bier ich in der Rechten trug --- Versengold}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Das Bier ich in der Rechten trug} --- Versengold}
 
     \label{dasbierichinderrechtentrug}
 
