--- a/src/derleiermann.tex
+++ b/src/derleiermann.tex
@@ -5,7 +5,7 @@
     index={derleiermann}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Der Leiermann --- Schubert-Liszt}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Der Leiermann} --- Schubert-Liszt}
 
     \label{derleiermann}
 
