--- a/src/dienackteelfe.tex
+++ b/src/dienackteelfe.tex
@@ -5,7 +5,7 @@
     index={dienackteelfe}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Die nackte Elfe - Hasenscheisse}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Die nackte Elfe} --- Hasenscheisse}
 
     \label{dienackteelfe}
 
