--- a/src/dimming_of_the_day.tex
+++ b/src/dimming_of_the_day.tex
@@ -5,7 +5,7 @@
     index={dimmingoftheday}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Dimming of the day --- Richard Thompson}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Dimming of the day} --- Richard Thompson}
 
     \label{dimmingoftheday}
 
