--- a/src/dragonball.tex
+++ b/src/dragonball.tex
@@ -5,7 +5,7 @@
     index={dragonball}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Dragonball --- aequitaS.}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Dragonball} --- aequitaS.}
 
     \label{dragonball}
 
