--- a/src/dunklestunde.tex
+++ b/src/dunklestunde.tex
@@ -5,7 +5,7 @@
     index={dunklestunde}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Dunkle Stunde --- Schandmaul}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Dunkle Stunde} --- Schandmaul}
 
     \label{dunklestunde}
 
