--- a/src/everythingburns.tex
+++ b/src/everythingburns.tex
@@ -5,7 +5,7 @@
     index={everythingburns}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Everything burns - Anastacia ft. Ben Moody}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Everything burns} --- Anastacia ft. Ben Moody}
 
     \label{everythingburns}
 
