--- a/src/fragile.tex
+++ b/src/fragile.tex
@@ -5,7 +5,7 @@
     index={fragile}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Fragile --- Sting}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Fragile} --- Sting}
 
     \label{fragile}
 
