--- a/src/grausinddieschwingen.tex
+++ b/src/grausinddieschwingen.tex
@@ -5,7 +5,7 @@
     index={grausinddieschwingen}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Grau sind die Schwingen - Versengold}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Grau sind die Schwingen} --- Versengold}
 
     \label{grausinddieschwingen}
 
