--- a/src/hallelujah.tex
+++ b/src/hallelujah.tex
@@ -5,7 +5,7 @@
     index={hallelujah}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Hallelujah --- Leonhard Cohen}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Hallelujah} --- Leonhard Cohen}
 
     \label{hallelujah}
 
