--- a/src/hasso.tex
+++ b/src/hasso.tex
@@ -5,7 +5,7 @@
     index={hasso}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Hasso - Die Prinzen}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Hasso} --- Die Prinzen}
 
     \label{hasso}
 
