--- a/src/havent_we_lost_enough.tex
+++ b/src/havent_we_lost_enough.tex
@@ -5,7 +5,7 @@
     index={haventwelostenough}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Haven't we lost enough --- Crosby, Stills and Nash}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Haven't we lost enough} --- Crosby, Stills and Nash}
 
     \label{haventwelostenough}
 
