--- a/src/helplesslyhoping.tex
+++ b/src/helplesslyhoping.tex
@@ -5,7 +5,7 @@
     index={helplesslyhoping}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Helplessly Hoping --- Crosby, Stills and Nash}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Helplessly Hoping} --- Crosby, Stills and Nash}
 
     \label{helplesslyhoping}
 
