--- a/src/hesapirate.tex
+++ b/src/hesapirate.tex
@@ -5,7 +5,7 @@
     index={hesapirate}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad He's a Pirate --- aequitaS.}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{He's a Pirate} --- aequitaS.}
 
     \label{hesapirate}
 
