--- a/src/icourtedaweegirl.tex
+++ b/src/icourtedaweegirl.tex
@@ -5,7 +5,7 @@
     index={icourtedaweegirl}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad I courted a wee girl --- \textit{Traditional}}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{I courted a wee girl} --- \textit{Traditional}}
 
     \label{icourtedaweegirl}
 
