--- a/src/ihrsonah.tex
+++ b/src/ihrsonah.tex
@@ -5,7 +5,7 @@
     index={ihrsonah}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Ihr so nah - Versengold}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Ihr so nah} --- Versengold}
 
     \label{ihrsonah}
 
