--- a/src/itdoesntmatter.tex
+++ b/src/itdoesntmatter.tex
@@ -5,7 +5,7 @@
     index={itdoesntmatter}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad It doesn't matter --- Dan Fogelberg}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{It doesn't matter} --- Dan Fogelberg}
 
     \label{itdoesntmatter}
 
