--- a/src/kaperfahrt.tex
+++ b/src/kaperfahrt.tex
@@ -5,7 +5,7 @@
     index={kaperfahrt}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Kaperfahrt --- Die \"{A}rzte}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Kaperfahrt} --- Die \"{A}rzte}
 
     \label{kaperfahrt}
 
