--- a/src/kickapoo.tex
+++ b/src/kickapoo.tex
@@ -5,7 +5,7 @@
     index={kickapoo}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Kickapoo - Tenacious D}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Kickapoo} --- Tenacious D}
 
     \label{kickapoo}
 
