--- a/src/kleidausrosen.tex
+++ b/src/kleidausrosen.tex
@@ -5,7 +5,7 @@
     index={kleidausrosen}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Kleid aus Rosen - Subway to Sally}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Kleid aus Rosen} --- Subway to Sally}
 
     \label{kleidausrosen}
 
