--- a/src/layla.tex
+++ b/src/layla.tex
@@ -5,7 +5,7 @@
     index={layla}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Layla --- Eric Clapton}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Layla} --- Eric Clapton}
 
     \label{layla}
 
