--- a/src/littletalks.tex
+++ b/src/littletalks.tex
@@ -5,7 +5,7 @@
     index={littletalks}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Little Talks - Julia Sheer \& Jon D.}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Little Talks} --- Julia Sheer \& Jon D.}
 
     \label{littletalks}
 
