--- a/src/lives_in_the_balance.tex
+++ b/src/lives_in_the_balance.tex
@@ -5,7 +5,7 @@
     index={livesinthebalance}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Lives in the Balance --- Jackson Browne}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Lives in the Balance} --- Jackson Browne}
 
     \label{livesinthebalance}
 
