--- a/src/lordoftherings.tex
+++ b/src/lordoftherings.tex
@@ -5,7 +5,7 @@
     index={lordoftherings}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad The Lord of the Rings - Blind Guardian}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{The Lord of the Rings} --- Blind Guardian}
 
     \label{lordoftherings}
 
