--- a/src/madworld.tex
+++ b/src/madworld.tex
@@ -5,7 +5,7 @@
     index={madworld}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Mad World --- Wise Guys}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Mad World} --- Wise Guys}
 
     \label{madworld}
 
