--- a/src/makingupthemiles.tex
+++ b/src/makingupthemiles.tex
@@ -5,7 +5,7 @@
     index={makingupthemiles}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Making up the miles - Kieran Halpin}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Making up the miles} --- Kieran Halpin}
 
     \label{makingupthemiles}
 
