--- a/src/moonshadow.tex
+++ b/src/moonshadow.tex
@@ -5,7 +5,7 @@
     index={moonshadow}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Moonshadow - Cat Stevens}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Moonshadow} --- Cat Stevens}
 
     \label{moonshadow}
 
