--- a/src/nebelueberdenauen.tex
+++ b/src/nebelueberdenauen.tex
@@ -5,7 +5,7 @@
     index={nebelueberdenauen}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Nebel \"{u}ber den Auen - Versengold}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Nebel \"{u}ber den Auen} --- Versengold}
 
     \label{nebelueberdenauen}
 
