--- a/src/ohadelsmann.tex
+++ b/src/ohadelsmann.tex
@@ -5,7 +5,7 @@
     index={ohadelsmann}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Oh Adelsmann - Versengold}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Oh Adelsmann} --- Versengold}
 
     \label{ohadelsmann}
 
