--- a/src/prinzessin.tex
+++ b/src/prinzessin.tex
@@ -5,7 +5,7 @@
     index={prinzessin}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Prinzessin - Schandmaul}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Prinzessin} --- Schandmaul}
 
     \label{prinzessin}
 
