--- a/src/rollinginthedeep.tex
+++ b/src/rollinginthedeep.tex
@@ -5,7 +5,7 @@
     index={rollinginthedeep}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Rolling in the deep --- Adele}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Rolling in the deep} --- Adele}
 
     \label{rollinginthedeep}
 
