--- a/src/sailingtophiladelphia.tex
+++ b/src/sailingtophiladelphia.tex
@@ -5,7 +5,7 @@
     index={sailingtophiladelphia}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Sailing to Philadelphia --- Mark Knopfler \& James Taylor}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Sailing to Philadelphia} --- Mark Knopfler \& James Taylor}
 
     \label{sailingtophiladelphia}
 
