--- a/src/sevennationarmy.tex
+++ b/src/sevennationarmy.tex
@@ -5,7 +5,7 @@
     index={sevennationarmy}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Seven Nation Army - Zella Day}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Seven Nation Army} --- Zella Day}
 
     \label{sevennationarmy}
 
