--- a/src/soundofsilence.tex
+++ b/src/soundofsilence.tex
@@ -5,7 +5,7 @@
     index={thesoundofsilence}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad The Sound of Silence --- Disturbed}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{The Sound of Silence} --- Disturbed}
 
     \label{thesoundofsilence}
 
