--- a/src/stepitoutmary.tex
+++ b/src/stepitoutmary.tex
@@ -5,7 +5,7 @@
     index={stepitoutmary}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Step it out Mary --- Noel McLoughlin}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Step it out Mary} --- Noel McLoughlin}
 
     \label{stepitoutmary}
 
