--- a/src/thebardssong.tex
+++ b/src/thebardssong.tex
@@ -5,7 +5,7 @@
     index={thebardssong}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad The Bard's Song --- Blind Guardian}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{The Bard's Song} --- Blind Guardian}
 
     \label{thebardssong}
 
