--- a/src/thegreenfieldsoffrance.tex
+++ b/src/thegreenfieldsoffrance.tex
@@ -5,7 +5,7 @@
     index={thegreenfieldsoffrance}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad The green fields of France --- Eric Boyle}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{The green fields of France} --- Eric Boyle}
 
     \label{thegreenfieldsoffrance}
 
