--- a/src/therattlinbog.tex
+++ b/src/therattlinbog.tex
@@ -5,7 +5,7 @@
     index={therattlinbog}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad The rattlin' Bog --- \textit{Traditional}}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{The rattlin' Bog} --- \textit{Traditional}}
 
     \label{therattlinbog}
 
