--- a/src/thewildrover.tex
+++ b/src/thewildrover.tex
@@ -5,7 +5,7 @@
     index={thewildrover}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad The wild Rover --- \textit{Traditional}}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{The wild Rover} --- \textit{Traditional}}
 
     \label{thewildrover}
 
