--- a/src/timshel.tex
+++ b/src/timshel.tex
@@ -5,7 +5,7 @@
     index={timshel}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Timshel --- Mumford and Sons}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Timshel} --- Mumford and Sons}
 
     \label{timshel}
 
