--- a/src/trigardon.tex
+++ b/src/trigardon.tex
@@ -6,7 +6,7 @@
 
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Trigardon --- Jan Hegenberg}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Trigardon} --- Jan Hegenberg}
 
     \label{trigardon}
 
