--- a/src/trunckenbolde.tex
+++ b/src/trunckenbolde.tex
@@ -5,7 +5,7 @@
     index={trunckenbolde}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Trunckenbolde - Versengold}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Trunckenbolde} --- Versengold}
 
     \label{trunckenbolde}
 
