--- a/src/untotaufurlaub.tex
+++ b/src/untotaufurlaub.tex
@@ -5,7 +5,7 @@
     index={untotaufurlaub}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Untot auf Urlaub --- Jan Hegenberg}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Untot auf Urlaub} --- Jan Hegenberg}
 
     \label{untotaufurlaub}
 
