--- a/src/upwherewebelong.tex
+++ b/src/upwherewebelong.tex
@@ -5,7 +5,7 @@
     index={upwherewebelong}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Up where we belong --- Joe Cocker \& Jennifer Warnes}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Up where we belong} --- Joe Cocker \& Jennifer Warnes}
 
     \label{upwherewebelong}
 
