--- a/src/walkdownthatlonesomeroad.tex
+++ b/src/walkdownthatlonesomeroad.tex
@@ -5,7 +5,7 @@
     index={walkdownthatlonesomeroad}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Walk down that lonesome road --- James Taylor}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Walk down that lonesome road} --- James Taylor}
 
     \label{walkdownthatlonesomeroad}
 
