--- a/src/walkinginmemphis.tex
+++ b/src/walkinginmemphis.tex
@@ -5,7 +5,7 @@
     index={walkinginmemphis}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Walking in Memphis - Marc Cohn}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Walking in Memphis} --- Marc Cohn}
 
     \label{walkinginmemphis}
 
