--- a/src/woutmitdenwoelfen.tex
+++ b/src/woutmitdenwoelfen.tex
@@ -5,7 +5,7 @@
     index={woutmitdenwoelfen}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Wout mit den W\"{o}lfen - Versengold}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Wout mit den W\"{o}lfen} --- Versengold}
 
     \label{woutmitdenwoelfen}
 
