--- a/src/yejackobites.tex
+++ b/src/yejackobites.tex
@@ -5,7 +5,7 @@
     index={yejackobites}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Ye Jackobites --- \textit{Traditional}}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Ye Jackobites} --- \textit{Traditional}}
 
     \label{yejackobites}
 
