--- a/src/blackbird.tex
+++ b/src/blackbird.tex
@@ -5,7 +5,7 @@
     index={blackbird}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Blackbird --- Crosby, Stills and Nash}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Blackbird} --- Crosby, Stills and Nash}
 
     \label{blackbird}
 
