--- a/src/derwandersmann.tex
+++ b/src/derwandersmann.tex
@@ -5,7 +5,7 @@
     index={derwandersmann}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Der Wandersmann --- Schandmaul}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Der Wandersmann} --- Schandmaul}
 
     \label{derwandersmann}
 
