--- a/src/fassbierpaladosen.tex
+++ b/src/fassbierpaladosen.tex
@@ -5,7 +5,7 @@
     index={fassbierpaladosen}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Fassbier und Paladosen --- Jan Hegenberg}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Fassbier und Paladosen} --- Jan Hegenberg}
 
     \label{fassbierpaladosen}
 
