--- a/src/geisterschiff.tex
+++ b/src/geisterschiff.tex
@@ -5,7 +5,7 @@
     index={geisterschiff}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Das Geisterschiff --- Schandmaul}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Das Geisterschiff} --- Schandmaul}
 
     \label{geisterschiff}
 
