--- a/src/i_see_fire.tex
+++ b/src/i_see_fire.tex
@@ -5,7 +5,7 @@
     index={iseefire}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad I see Fire --- Ed Sheeran}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{I see Fire} --- Ed Sheeran}
 
     \label{iseefire}
 
