--- a/src/mordaufdemabort.tex
+++ b/src/mordaufdemabort.tex
@@ -5,7 +5,7 @@
     index={mordaufdemabort}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Mord auf dem Abort --- Versengold}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Mord auf dem Abort} --- Versengold}
 
     \label{mordaufdemabort}
 
