--- a/src/tanzmitmir.tex
+++ b/src/tanzmitmir.tex
@@ -5,7 +5,7 @@
     index={tanzmitmir}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Tanz mit mir - Faun feat. Santiano}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Tanz mit mir} --- Faun feat. Santiano}
 
     \label{tanzmitmir}
 
