--- a/src/teach_your_children.tex
+++ b/src/teach_your_children.tex
@@ -5,7 +5,7 @@
     index={teachyourchildren}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Teach your children --- Crosby, Stills and Nash}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Teach your children} --- Crosby, Stills and Nash}
 
     \label{teachyourchildren}
 
