--- a/src/thebonnyshipthediamond.tex
+++ b/src/thebonnyshipthediamond.tex
@@ -5,7 +5,7 @@
     index={thebonnyshipthediamond}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad The bonny ship the diamond --- \textit{Traditional}}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{The bonny ship the diamond} --- \textit{Traditional}}
 
     \label{thebonnyshipthediamond}
 
