--- a/src/thedragonborncomes.tex
+++ b/src/thedragonborncomes.tex
@@ -5,7 +5,7 @@
     index={thedragonborncomes}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad The Dragonborn comes --- Malukah}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{The Dragonborn comes} --- Malukah}
 
     \label{thedragonborncomes}
 
