--- a/src/willstdu.tex
+++ b/src/willstdu.tex
@@ -5,7 +5,7 @@
     index={willstdu}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad Willst Du? --- Schandmaul}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Willst Du?} --- Schandmaul}
 
     \label{willstdu}
 
