--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -1,6 +1,14 @@
 \documentclass[landscape]{../TeX/Chordbook/chordbook}
 
 \usepackage{pdflscape}
+\usepackage{afterpage}
+
+\newcommand{\blankpage}{%
+    \null
+    \thispagestyle{empty}%
+    \addtocounter{page}{-1}%
+    \newpage}
+\newcommand{\wpage}{\afterpage{\blankpage}}
 
 \usepackage[%
     colorlinks=true,
@@ -15,6 +23,8 @@
 \begin{document}
 
 \date{\textbf{Erstellt am:} 10. Februar 2014 \\ \textbf{\"{U}berarbeitet am:} \today}
+
+\wpage
 
 \maketitle \clearpage
 
@@ -79,7 +89,7 @@
         \begin{songs}{}
             %\input{../src/dienackteelfe}                    \sclearpage
             %\input{../src/dragonball}                       \sclearpage
-            \input{../src/buenastardesamigo}                \sclearpage
+            %\input{../src/buenastardesamigo}                \sclearpage
             \input{../src/fassbierpaladosen}                \sclearpage
             \input{../src/hesapirate}                       \sclearpage
             %\input{../src/kaperfahrt}                       \sclearpage
