--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -94,7 +94,7 @@
             \input{../src/hesapirate}                       \sclearpage
             %\input{../src/kaperfahrt}                       \sclearpage
             %\input{../src/kickapoo}                         \sclearpage
-            \input{../src/trigardon}                        \sclearpage
+            \input{../src/trigardon}                        %\sclearpage
             %\input{../src/untotaufurlaub}
         \end{songs}{}
 
