new songs + some modified
see git diff for information

--- a/src/kaperfahrt.tex
+++ b/src/kaperfahrt.tex
@@ -34,6 +34,18 @@
     \endchorus
 
     \beginverse
+        Alle, die mit uns das Walro\ss{} t\"{o}ten,
+        M\"{u}ssen M\"{a}nner mit B\"{a}rten sein
+    \endverse
+
+    \beginchorus
+        Jan und Hein und Klass und Pit
+        Die haben B\"{a}rte, die haben B\"{a}rte.
+        Jan und Hein und Klaas und Pit
+        Die haben B\"{a}rte die fahren mit.
+    \endchorus
+
+    \beginverse
         Alle, die Wale und Robben fangen,
         M\"{u}ssen M\"{a}nner mit B\"{a}rten sein.
     \endverse
@@ -68,4 +80,9 @@
         Jan und Hein und Klaas und Pit
         Die haben B\"{a}rte die fahren mit.
     \endchorus
+
+    \beginverse
+        Alle, die endlich zur H\"{o}lle mitfahren,
+        M\"{u}ssen M\"{a}nner mit B\"{a}rten sein
+    \endverse
 \endsong
