section "modern rock blues" commented in

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -90,24 +90,27 @@
             %\input{../src/dienackteelfe}                    \sclearpage
             %\input{../src/dragonball}                       \sclearpage
             %\input{../src/buenastardesamigo}                \sclearpage
+            \input{../src/deathtothedrow}                   \sclearpage
             \input{../src/fassbierpaladosen}                \sclearpage
             \input{../src/hesapirate}                       \sclearpage
             %\input{../src/kaperfahrt}                       \sclearpage
             %\input{../src/kickapoo}                         \sclearpage
             \input{../src/trigardon}                        %\sclearpage
+            \input{../src/theenchanter}                     \sclearpage
             %\input{../src/untotaufurlaub}
         \end{songs}{}
 
-    %\clearpage
-    %\songsection{Modern / Rock}{}
-    %    \begin{songs}{}
-    %        \input{../src/everythingburns}                  \sclearpage
-    %        \input{../src/littletalks}                      \sclearpage
-    %        \input{../src/rollinginthedeep}                 \sclearpage
-    %        \input{../src/sevennationarmy}                  \sclearpage
-    %        \input{../src/soundofsilence.tex}               \sclearpage
-    %        \input{../src/timshel}
-    %    \end{songs}
+    \clearpage
+    \songsection{Modern / Rock / Blues}{}
+        \begin{songs}{}
+            %\input{../src/everythingburns}                  \sclearpage
+            %\input{../src/littletalks}                      \sclearpage
+            \input{../src/mountainclimbing}                 \sclearpage
+            %\input{../src/rollinginthedeep}                 \sclearpage
+            %\input{../src/sevennationarmy}                  \sclearpage
+            %\input{../src/soundofsilence.tex}               \sclearpage
+            %\input{../src/timshel}
+        \end{songs}
 
     \clearpage
     \songsection{Oldies}
