--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -23,10 +23,24 @@
 \begin{document}
 
 \date{\textbf{Erstellt am:} 10. Februar 2014 \\ \textbf{\"{U}berarbeitet am:} \today}
+\clearpage
 
-\wpage
+%\wpage
 
 \maketitle \clearpage
+
+\begin{center}
+    { \Large
+        \parbox{17cm}{
+            Dieses \textit{Chordbook} stellt eine pers\"{o}nliche und vielf\"{a}ltige Sammlung von Liedgut dar, die ich \"{u}ber die Jahre gesammelt habe.
+            Ich erhebe keinen Anspruch auf Eigentum oder Richtigkeit der Dargestellten Texte oder Akkorde, z.T. habe ich sie von anderen Menschen \"{u}bernommen und mit der Zeit selbst abgewandelt, z.T. habe ich sie mir selber durch H\"{o}ren oder Video-Material abkupfern k\"{o}nnen. \par\medskip
+
+            Sollte es Einw\"{a}nde gegen ein oder mehrere Lieder oder Texte geben, bin ich \"{u}ber meine E-Mail Adresse \texttt{hringriin@gmail.com} erreichbar.
+        }
+    }
+\end{center}
+
+\clearpage
 
 \tableofcontents \clearpage
 
@@ -76,7 +90,7 @@
             \input{../src/thebardssong}                     \sclearpage
             \input{../src/thebonnyshipthediamond}           \sclearpage
             \input{../src/thedragonborncomes}               \sclearpage
-            \input{../src/therattlinbog}                    \sclearpage
+            %\input{../src/therattlinbog}                    \sclearpage
             %\input{../src/thewildrover}                     \sclearpage
             %\input{../src/trunckenbolde}                    \sclearpage
             \input{../src/willstdu}                         \sclearpage
@@ -90,27 +104,28 @@
             %\input{../src/dienackteelfe}                    \sclearpage
             %\input{../src/dragonball}                       \sclearpage
             %\input{../src/buenastardesamigo}                \sclearpage
-            \input{../src/deathtothedrow}                   \sclearpage
+            %\input{../src/deathtothedrow}                   \sclearpage
             \input{../src/fassbierpaladosen}                \sclearpage
             \input{../src/hesapirate}                       \sclearpage
             %\input{../src/kaperfahrt}                       \sclearpage
             %\input{../src/kickapoo}                         \sclearpage
+            \input{../src/stillenacht-larp}                 \sclearpage
             \input{../src/trigardon}                        %\sclearpage
             \input{../src/theenchanter}                     \sclearpage
             %\input{../src/untotaufurlaub}
         \end{songs}{}
 
-    \clearpage
-    \songsection{Modern / Rock / Blues}{}
-        \begin{songs}{}
-            %\input{../src/everythingburns}                  \sclearpage
-            %\input{../src/littletalks}                      \sclearpage
-            \input{../src/mountainclimbing}                 \sclearpage
-            %\input{../src/rollinginthedeep}                 \sclearpage
-            %\input{../src/sevennationarmy}                  \sclearpage
-            %\input{../src/soundofsilence.tex}               \sclearpage
-            %\input{../src/timshel}
-        \end{songs}
+    %\clearpage
+    %\songsection{Modern / Rock / Blues}{}
+    %    \begin{songs}{}
+    %        %\input{../src/everythingburns}                  \sclearpage
+    %        %\input{../src/littletalks}                      \sclearpage
+    %        %\input{../src/mountainclimbing}                 \sclearpage
+    %        %\input{../src/rollinginthedeep}                 \sclearpage
+    %        %\input{../src/sevennationarmy}                  \sclearpage
+    %        %\input{../src/soundofsilence.tex}               \sclearpage
+    %        %\input{../src/timshel}
+    %    \end{songs}
 
     \clearpage
     \songsection{Oldies}
@@ -121,6 +136,7 @@
             %\input{../src/blowinginthewind}                 \sclearpage
             %\input{../src/dimming_of_the_day}               \sclearpage
             \input{../src/fragile}                          \sclearpage
+            \input{../src/godsgonnacutyoudown}              \sclearpage
             \input{../src/havent_we_lost_enough}            \sclearpage
             \input{../src/hallelujah}                       \sclearpage
             %\input{../src/helplesslyhoping}                 \sclearpage
@@ -128,6 +144,7 @@
             \input{../src/layla.tex}                        \sclearpage
             \input{../src/lives_in_the_balance}             \sclearpage
             %\input{../src/moonshadow}                       \sclearpage
+            \input{../src/rainbowinthedark}                 \sclearpage
             %\input{../src/sailingtophiladelphia}            \sclearpage
             \input{../src/teach_your_children}              \sclearpage
             \input{../src/thegreenfieldsoffrance}           \sclearpage
