[ new song files added + edits to existing files ]
- god's gonna cut you down
- rainbow in the dark
- stile nacht (larp)

- mord auf dem abort will be edited (chord names will be added)

--- a/src/godsgonnacutyoudown.tex
+++ b/src/godsgonnacutyoudown.tex
@@ -1,67 +1,92 @@
+\beginsong{God's gonna cut you down}[%
+    by={Johnny Cash},
+    index={godsgonnacutyoudown}]
 
+    \phantomsection
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{God's gonna cut you down} --- Johnny Cash}
 
-You can run on for a long time
-Run on for a long time
-Run on for a long time
-Sooner or later God'll cut you down
-Sooner or later God'll cut you down
+    \label{godsgonnacutyoudown}
 
-Go tell that long tongue liar
-Go and tell that midnight rider
-Tell the rambler, the gambler, the back biter
-Tell 'em that God's gonna cut 'em down
-Tell 'em that God's gonna cut 'em down
+    %\begin{center}
+    %    \gtab{E}{022100:023100}
+    %    \gtab{A}{X0222X:001110}
+    %    \gtab{D}{XX0232:000132}
+    %    \gtab{F}{133211:134211}
+    %    \gtab{G}{3:133211:134211}
+    %    \gtab{A7}{30XXXX:200000}
+    %    \gtab{E7}{020100:020100}
+    %\end{center}
 
-You can run on for a long time
-Run on for a long time
-Run on for a long time
-Sooner or later God'll cut you down
-Sooner or later God'll cut you down
+    \beginchorus
+        You can run on for a long time
+        Run on for a long time
+        Run on for a long time
+        Sooner or later God'll cut you down
+        Sooner or later God'll cut you down
+    \endchorus
 
+    \beginverse*
+        Go tell that long tongue liar
+        Go and tell that midnight rider
+        Tell the rambler, the gambler, the back biter
+        Tell 'em that God's gonna cut 'em down
+        Tell 'em that God's gonna cut 'em down
+    \endverse
 
-Well my goodness gracious let me tell you the news
-My head's been wet with the midnight dew
-I've been down on bended knee talkin' to the man from Galilee
-He spoke to me in the voice so sweet
-I thought I heard the shuffle of the angel's feet
-He called my name and my heart stood still
-When he said, "John go do My will!"
+    \beginchorus
+        You can run on for a long time
+        Run on for a long time
+        Run on for a long time
+        Sooner or later God'll cut you down
+        Sooner or later God'll cut you down
+    \endchorus
 
+    \beginverse
+        Well my goodness gracious let me tell you the news
+        My head's been wet with the midnight dew
+        I've been down on bended knee talkin' to the man from Galilee
+        He spoke to me in the voice so sweet
+        I thought I heard the shuffle of the angel's feet
+        He called my name and my heart stood still
+        When he said, "John go do My will!"
+    \endverse
 
+    \beginverse*
+        Go tell that long tongue liar
+        Go and tell that midnight rider
+        Tell the rambler, the gambler, the back biter
+        Tell 'em that God's gonna cut 'em down
+        Tell 'em that God's gonna cut 'em down
+    \endverse
 
+    \beginchorus
+        You can run on for a long time
+        Run on for a long time
+        Run on for a long time
+        Sooner or later God'll cut you down
+        Sooner or later God'll cut you down
+    \endchorus
 
+    \beginverse
+        Well you may throw your rock and hide your hand
+        Workin' in the dark against your fellow man
+        But as sure as God made black and white
+        What's down in the dark will be brought to the light
+    \endverse
 
+    \beginchorus
+        You can run on for a long time
+        Run on for a long time
+        Run on for a long time
+        Sooner or later God'll cut you down
+    \endchorus
 
-
-
-Go tell that long tongue liar
-Go and tell that midnight rider
-Tell the rambler, the gambler, the back biter
-Tell 'em that God's gonna cut 'em down
-Tell 'em that God's gonna cut 'em down
-
-You can run on for a long time
-Run on for a long time
-Run on for a long time
-Sooner or later God'll cut you down
-Sooner or later God'll cut you down
-
-Well you may throw your rock and hide your hand
-Workin' in the dark against your fellow man
-But as sure as God made black and white
-What's down in the dark will be brought to the light
-
-You can run on for a long time
-Run on for a long time
-Run on for a long time
-Sooner or later God'll cut you down
-Sooner or later God'll cut you down
-Go tell that long tongue liar
-Go and tell that midnight rider
-Tell the rambler, the gambler, the back biter
-Tell 'em that God's gonna cut you down
-Tell 'em that God's gonna cut you down
-Tell 'em that God's gonna cut you down
-
-
-
+    \beginchorus
+        You can run on for a long time
+        Run on for a long time
+        Run on for a long time
+        Tell 'em that God's gonna cut you down
+        Tell 'em that God's gonna cut you down
+        Tell 'em that God's gonna cut you down
+    \endchorus
+\endsong
