--- a/src/rainbowinthedark.tex
+++ b/src/rainbowinthedark.tex
@@ -1,67 +1,81 @@
+\stepcounter{subsection}
 
+\beginsong{Rainbow in the dark}[%
+    by={Dio},
+    index={rainbowinthedark}]
 
-When there's lightning
-You know it always brings me down
-'cause it's free
-And I see that it's me
-Who's lost and never found
-I cry out for magic
-I feel it dancing in the light
+    \phantomsection
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Rainbow in the dark} --- Dio}
 
-It was cold
-Lost my hold to the shadows of the night
+    \label{rainbowinthedark}
 
-No sign of the morning coming
-You've been left on your own
-Like a rainbow in the dark
-A rainbow in the dark
+    \begin{center}
+        \gtab{Am}{X02210:002310}
+        \gtab{F}{X0321X:003210}
+        \gtab{G}{3X0003:400005}
+    \end{center}
 
+    \beginverse
+        When there's lightning
+        You know it always brings me down
+        'cause it's free
+        And I see that it's me
+        Who's lost and never found
 
+        I cry out for magic
+        I feel it dancing in the light
+        It was cold
+        Lost my hold to the shadows of the night
+    \endverse
 
-Do your demons
-Do they ever let you go?
-When you've tried
-Do they hide deep inside?
-Is it someone that you know?
+    \beginchorus
+        No sign of the morning coming
+        You've been left on your own
+        Like a rainbow in the dark
+        A rainbow in the dark
+    \endchorus
 
-You're just a picture
-You're an image caught in time
-We're a lie
-You and I
-We're words without a rhyme
+    \beginverse
+        Do your demons
+        Do they ever let you go?
+        When you've tried
+        Do they hide deep inside?
+        Is it someone that you know?
 
+        You're just a picture
+        You're an image caught in time
+        We're a lie
+        You and I
+        We're words without a rhyme
+    \endverse
 
+    \beginchorus
+        There's no sign of the morning coming
+        You've been left on your own
+        Like a rainbow in the dark
+        Just a rainbow in the dark
+    \endchorus
 
+    \beginverse
+        When I see lightning
+        You know it always brings me down
+        'cause it's free
+        And I see that it's me
+        Who's lost and never found
 
-There's no sign of the morning coming
-You've been left on your own
-Like a rainbow in the dark
-Just a rainbow in the dark
+        Feel the magic
+        I fell it floating in the air
+        But it's fear
+        And you'll hear it calling you beware
+    \endverse
 
-Yeah!
-(Guitar Solo)
-
-When I see lightning
-You know it always brings me down
-'cause it's free
-And I see that it's me
-Who's lost and never found
-
-Feel the magic
-I fell it floating in the air
-But it's fear
-And you'll hear it calling you beware
-Look out!
-There's no sign of the morning coming
-There's no sign of the day
-You've been left on your own
-Like a rainbow
-Like a rainbow in the dark
-Yeah, yeah
-You're a rainbow in the dark
-Just a rainbow in the dark
-No sign of the morning
-You're a rainbow in the dark
-
-
-
+    \beginchorus
+        There's no sign of the morning coming
+        There's no sign of the day
+        You've been left on your own
+        Like a rainbow
+        Like a rainbow in the dark
+        You're a rainbow in the dark
+        Just a rainbow in the dark
+    \endchorus
+\endsong
