--- a/src/mordaufdemabort.tex
+++ b/src/mordaufdemabort.tex
@@ -17,127 +17,127 @@
     \end{center}
 
     \beginverse
-        Nachdem sich unser Graf denn mit dem Volke einst zerstritt
-        Das wahrlich arg und schwer uznter den hohen Steuern litt
-        Und voller Zorn das n\"{a}chste Mal den Eintreiber versohlte
-        Der daraufhin mit S\"{o}ldnerschaft das Doppelte sich holte.
+        \[A]Nachdem sich unser Graf denn mit dem \[E]Volke einst zerstritt
+        Das \[A]wahrlich arg und schwer unter den \[E]hohen Steuern litt
+        Und \[A]voller Zorn das n\"{a}chste Mal den \[E]Eintreiber versohlte
+        Der \[A]daraufhin mit S\"{o}ldnerschaft das \[D]Doppel\[E]te sich \[A]holte.
 
-        Beschloss der Graf den Abort auf dem Bergfried neu zu richten
-        Auf dass die Leute in dem Dorf den Balken konnten sichten
-        Und um ihn' jeden Morgen dann f\"{u}r die geliebte Gunst zu danken
-        Zeigte er mit Donnerschlag zum Morgengru\ss{} den Blanken.
+        Beschl\[A]oss der Graf den Abort auf dem \[E]Bergfried neu zu richten
+        Auf \[A]dass die Leute in dem Dorf den \[E]Balken konnten sichten
+        Und \[A]um ihn' jeden Morgen dann f\"{u}r \[E]die geliebte Gunst zu danken
+        \[A]Zeigte er mit Donnerschlag zum \[D]Morgen\[D]gru\ss{} den \[A]Blanken.
     \endverse
 
     \beginverse*
-        Nach vieler Jahre in der Schmach und lang erlebter Plage
-        raunt pl\"{o}tzlich durch des Volkes Reihen schmunzelnd eine Frage:
+        Nach \[D]vieler Jahre in der Schmach und \[E]lang erlebter Plage
+        raunt \[A]pl\"{o}tzlich durch des Volkes Reihen \[D]schmunzelnd eine Frage:
     \endverse
 
     \beginchorus
-        Wer hat den Donnerbalken anges\"{a}gt?
-        Wen hat's zu solch gottloser Tat bewegt?
-        Wer tr\"{a}gt die Handschrift von dem feigen Mord?
-        An unser'm Gnaden auf dem Turm-Abort ...
+        \[A]Wer hat den Donnerbalken \[E]anges\"{a}gt?
+        \[D]Wen hat's zu solch gottloser \[E]Tat bewegt?
+        \[A]Wer tr\"{a}gt die Handschrift von dem \[D]feigen Mord?
+        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort ... \[A] \[E] \[A] \[D] \[E] \[A]
     \endchorus
 
     \beginverse
-        Nach gar nicht langer Weile kam vom k\"{o}niglichen Thron
-        Bald schon eine Pfaff- und B\"{u}ttel-Aufkl\"{a}rkommission,
-        Welche diese dunkle Tat f\"{u}r aller Adelswohl wollt' lichten
-        Und getreulich von dem Vor- und Ab-Reinfall berichten.
+        Nach ^gar nicht langer Weile kam vom ^k\"{o}niglichen Thron
+        ^Bald schon eine Pfaff- und B\"{u}ttel-^Aufkl\"{a}rkommission,
+        ^Welche diese dunkle Tat f\"{u}r ^aller Adelswohl wollt' lichten
+        ^Und getreulich von dem Vor- und ^Ab-Rein^fall ber^ichten.
 
-        Es kamen viele Fragen auf wie die, warum der der Graben gar,
-        Der um die Burg flie\ss{}t, stets gef\"{u}llt, an diesem Morgen trocken war?
-        Und wer was zu den frischen Erdhaufbahnen um der Feste wei\ss{},
-        Dies sei nur eine Spargelzucht bezeugte ein alt Bauerngreis
+        ^Es kamen viele Fragen auf wie ^die, warum der der Graben gar,
+        Der ^um die Burg flie\ss{}t, stets gef\"{u}llt, an ^diesem Morgen trocken war?
+        Und ^wer was zu den frischen Erdhaufb^ahnen um der Feste wei\ss{},
+        Dies ^sei nur eine Spargelzucht bez^eugte ^ein alt ^Bauerngreis
     \endverse
 
     \beginverse*
-        Das Wasser ging wohl just zu Dunst nach Vortags Hitzeplage
-        Stellte so der Hauptmann fest umsorgt von einer Frage ...
+        Das \[D]Wasser ging wohl just zu Dunst nach \[E]Vortags Hitzeplage
+        \[A]Stellte so der Hauptmann fest \[D]umsorgt von einer Frage ...
     \endverse
 
     \beginchorus
-        Wer hat den Donnerbalken anges\"{a}gt?
-        Wen hat's zu solch gottloser Tat bewegt?
-        Wer tr\"{a}gt die Handschrift von dem feigen Mord?
-        An unser'm Gnaden auf dem Turm-Abort ...
+        \[A]Wer hat den Donnerbalken \[E]anges\"{a}gt?
+        \[D]Wen hat's zu solch gottloser \[E]Tat bewegt?
+        \[A]Wer tr\"{a}gt die Handschrift von dem \[D]feigen Mord?
+        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort ... \[A] \[E] \[A] \[D] \[E] \[A]
     \endchorus
 
     \beginverse
-        So suchte man im Volk umher nach weit'ren Zeuzgensagen
-        Und tat die h\"{o}chsten H\"{a}upter in dem Dorfrat denn befragen.
-        Der Schulze war gar Augenzeuge und sprach nach 'nem lauten Krach,
-        Fiel der Graf mit Rittlings-Salto und 'nem halben Auerbach
+        So ^suchte man im Volk umher nach ^weit'ren Zeuzgensagen
+        Und ^tat die h\"{o}chsten H\"{a}upter in dem ^Dorfrat denn befragen.
+        Der ^Schulze war gar Augenzeuge ^und sprach nach 'nem lauten Krach,
+        ^Fiel der Graf mit Rittlings-Salto ^und 'nem ^halben ^Auerbach
 
-        So grazi\"{o}s von seinem Stuhl, auf dem er sa\ss{} gar nackig drauf,
-        Zum Boden wo er denn noch schrie - bis ihm der Balk fiel oben auf
-        Und f\"{u}gte noch hinzu, kein Wunder, dass der solcher Art verreckt,
-        Der Graf hat seiner Lebzeit doch nur stets im Dung gesteckt.
+        \[D]So grazi\"{o}s von seinem Stuhl, auf \[E]dem er sa\ss{} gar nackig drauf,
+        Zum \[A]Boden wo er denn noch schrie - bis \[D]ihm der \[E]Balk fiel \[A]oben auf
+        Und \[A]f\"{u}gte noch hinzu, kein Wunder, \[E]dass der solcher Art verreckt,
+        Der \[A]Graf hat seiner Lebzeit doch nur \[D]stets im \[E]Dung \[A]gesteckt.
     \endverse
 
     \beginverse*
-        Die Kommission war zwar emp\"{o}rt, was hier der Schulze wage,
-        Doch lie\ss{}en sie von Strafe ab, zu wichtig war die Frage.
+        Die \[D]Kommission war zwar emp\"{o}rt, was \[E]hier der Schulze wage,
+        Doch \[A]lie\ss{}en sie von Strafe ab, zu \[D]wichtig war die Frage.
     \endverse
 
     \beginchorus
-        Wer hat den Donnerbalken anges\"{a}gt?
-        Wen hat's zu solch gottloser Tat bewegt?
-        Wer tr\"{a}gt die Handschrift von dem feigen Mord?
-        An unser'm Gnaden auf dem Turm-Abort ...
+        \[A]Wer hat den Donnerbalken \[E]anges\"{a}gt?
+        \[D]Wen hat's zu solch gottloser \[E]Tat bewegt?
+        \[A]Wer tr\"{a}gt die Handschrift von dem \[D]feigen Mord?
+        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort ... \[A] \[E] \[A] \[D] \[E] \[A]
     \endchorus
 
     \beginverse
-        Auch der Wachmann wusst' nicht weiter, obgleich er am Tore stand,
-        Und den werten Herrn vom Hause in der misslich Lage fand.
-        Er sagte denn, er k\"{o}nnt' an sich die ganze Tat auch nicht versteh'n
-            Und h\"{a}tte wohl noch nie im Leben so'n Haufen Schei\ss{} geseh'n.
+        ^Auch der Wachmann wusst' nicht weiter, ^obgleich er am Tore stand,
+        ^Und den werten Herrn vom Hause ^in der misslich Lage fand.
+        Er ^sagte denn, er k\"{o}nnt' an sich die ^ganze Tat auch nicht versteh'n
+        Und ^h\"{a}tte wohl noch nie im Leben ^so'n ^Haufen ^Schei\ss{} geseh'n.
 
-        Doch dann gab er den Hinweis noch vielleicht hat's ja den Koch verleitet
-        Und er hat an jenem Morgen allzu schweres Mahl bereitet.
-        Der Koch doch wies emp\"{o}rt zur\"{u}ck, er k\"{O}nne nicht der T\"{a}ter sein,
-        Er fl\"{o}\ss{}te uns'rem Grafen nur zwei Flaschen leichten Weines ein.
+        Doch ^dann gab er den Hinweis noch viel^leicht hat's ja den Koch verleitet
+        ^Und er hat an jenem Morgen ^allzu schweres Mahl bereitet.
+        Der ^Koch doch wies emp\"{o}rt zur\"{u}ck, er ^k\"{o}nne nicht der T\"{a}ter sein,
+        Er ^fl\"{o}\ss{}te uns'rem Grafen nur zwei ^Flaschen ^leichten ^Weines ein.
     \endverse
 
     \beginverse*
-        Die Kommission fand's m\"{u}\ss{}ig schon und bracht's zu keiner Klage
-        Und verzweifelte nur weiter and der steten Frage:
+        Die \[D]Kommission fand's m\"{u}\ss{}ig schon und \[E]bracht's zu keiner Klage
+        \[A]Und verzweifelte nur weiter \[D]an der steten Frage:
     \endverse
 
     \beginchorus
-        Wer hat den Donnerbalken anges\"{a}gt?
-        Wen hat's zu solch gottloser Tat bewegt?
-        Wer tr\"{a}gt die Handschrift von dem feigen Mord?
-        An unser'm Gnaden auf dem Turm-Abort ...
+        \[A]Wer hat den Donnerbalken \[E]anges\"{a}gt?
+        \[D]Wen hat's zu solch gottloser \[E]Tat bewegt?
+        \[A]Wer tr\"{a}gt die Handschrift von dem \[D]feigen Mord?
+        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort ... \[A] \[E] \[A] \[D] \[E] \[A]
     \endchorus
 
     \beginverse
-        Nach ein paar Tagen M\"{u}hsal war's den B\"{U}tteln dann zu viel
-        Und auch die Pfaffen hatten schon 'n and'ren Fall zum Ziel.
-        Das mag zwar wunderlich erschei'n, doch nur so lang wie ihr nicht wisst,
-        Dass nun das Haupt der Komission uns neu ernanntes Gr\"{a}flein ist.
+        Nach ^ein paar Tagen M\"{u}hsal war's den ^B\"{U}tteln dann zu viel
+        Und ^auch die Pfaffen hatten schon 'nen ^and'ren Fall zum Ziel.
+        Das ^mag zwar wunderlich erschei'n, doch ^nur so lang wie ihr nicht wisst,
+        Dass ^nun das Haupt der Komission uns ^neu ern^anntes ^Gr\"{a}flein ist.
 
-        Nachdem er denn den Abort legte auf 'ne and're Turmesseite
-        Und uns von der Steuerlast zumindest einen Teil befreite
-        Hernach feierte das Volk drei Tage lang voll Gl\"{u}ck und Wissen,
-        dass ein jeder aus dem Dorf am Mordtag noch vom Turm geschissen.
+        Nach^dem er denn den Abort legte ^auf 'ne and're Turmesseite
+        ^Und uns von der Steuerlast zum^indest einen Teil befreite
+        ^Hernach feierte das Volk drei ^Tage lang voll Gl\"{u}ck und Wissen,
+        ^dass ein jeder aus dem Dorf am ^Mordtag ^noch vom ^Turm geschissen.
     \endverse
 
     \beginverse*
-        Und durch's ganze Dorf erklang nicht eine Trauerklage,
-        Doch Jubelrufe auf die Antwort der gewissen Frage.
+        \[D]Und durch's ganze Dorf erklang nicht \[E]eine Trauerklage,
+        Doch \[A]Jubelrufe auf die Antwort \[D]der gewissen Frage.
     \endverse
 
     \beginchorus
-        Ich hab den Donnerbalken anges\"{a}gt,
-        Mich hat's zu solch gottloser Tat bewegt,
-        Mein ist die Handschrift von dem feigen Mord
-        An unser'm Gnaden auf dem Turm-Abort
+        \[A]Ich hab den Donnerbalken \[E]anges\"{a}gt,
+        \[D]Mich hat's zu solch gottloser \[E]Tat bewegt,
+        \[A]Mein ist die Handschrift von dem \[D]feigen Mord
+        \[A]An unser'm \[E]Gnaden auf dem \[A]Turm-Abort
 
-        Wir ham' den Donnerbalken anges\"{a}gt,
-        Uns hat's zu solch gottloser Tat bewegt,
-        Uns're ist die Handschrift von dem feigen Mord,
-        An unser'm Gnaden auf dem Turm-Abort.
+        \[A]Wir ham' den Donnerbalken anges\"{a}gt,
+        \[D]Uns hat's zu solch gottloser \[E]Tat bewegt,
+        \[A]Uns're ist die Handschrift von dem \[D]feigen Mord,
+        \[A]An unser'm Gnaden auf dem \[A]Turm-Abort.
     \endchorus
 \endsong
