[ preparation for Pfingstspektakel ]

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -75,7 +75,7 @@
             \input{../src/geisterschiff}                    \sclearpage
             %\input{../src/grausinddieschwingen}             \sclearpage
             \input{../src/i_see_fire}                       \sclearpage
-            \input{../src/icourtedaweegirl}                 \sclearpage
+            \input{../src/icourtedaweegirl}                 \sclearpage     \sclearpage
             %\input{../src/ihrsonah}                         \sclearpage
             %\input{../src/kleidausrosen}                    \sclearpage
             %\input{../src/lordoftherings}                   \sclearpage
@@ -109,7 +109,7 @@
             \input{../src/hesapirate}                       \sclearpage
             %\input{../src/kaperfahrt}                       \sclearpage
             %\input{../src/kickapoo}                         \sclearpage
-            \input{../src/stillenacht-larp}                 \sclearpage
+            %\input{../src/stillenacht-larp}                 \sclearpage
             \input{../src/trigardon}                        %\sclearpage
             \input{../src/theenchanter}                     \sclearpage
             %\input{../src/untotaufurlaub}
@@ -135,19 +135,19 @@
             %\input{../src/blackbird}                        \sclearpage
             %\input{../src/blowinginthewind}                 \sclearpage
             %\input{../src/dimming_of_the_day}               \sclearpage
-            \input{../src/fragile}                          \sclearpage
+            \input{../src/fragile}                          \sclearpage     \sclearpage
             \input{../src/godsgonnacutyoudown}              \sclearpage
             \input{../src/havent_we_lost_enough}            \sclearpage
             \input{../src/hallelujah}                       \sclearpage
             %\input{../src/helplesslyhoping}                 \sclearpage
             %\input{../src/itdoesntmatter}                   \sclearpage
-            \input{../src/layla.tex}                        \sclearpage
+            %\input{../src/layla.tex}                        \sclearpage
             \input{../src/lives_in_the_balance}             \sclearpage
             %\input{../src/moonshadow}                       \sclearpage
             \input{../src/rainbowinthedark}                 \sclearpage
             %\input{../src/sailingtophiladelphia}            \sclearpage
-            \input{../src/teach_your_children}              \sclearpage
-            \input{../src/thegreenfieldsoffrance}           \sclearpage
+            \input{../src/teach_your_children}              \sclearpage     \sclearpage
+            \input{../src/thegreenfieldsoffrance}           %\sclearpage
             %\input{../src/upwherewebelong}                  \sclearpage
             %\input{../src/walkinginmemphis}
         \end{songs}
