--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -140,6 +140,7 @@
             \input{../src/havent_we_lost_enough}            \sclearpage
             \input{../src/hallelujah}                       \sclearpage
             %\input{../src/helplesslyhoping}                 \sclearpage
+            \input{../src/constantsorrow}                   \sclearpage
             %\input{../src/itdoesntmatter}                   \sclearpage
             %\input{../src/layla.tex}                        \sclearpage
             \input{../src/lives_in_the_balance}             \sclearpage
