--- a/src/constantsorrow.tex
+++ b/src/constantsorrow.tex
@@ -65,6 +65,6 @@
     \endverse
 
     \beginchorus
-        He'll meet you on God's golden shorekkkkkk:vsp
+        He'll meet you on God's golden shore
     \endchorus
 \endsong
