--- a/src/hallelujah.tex
+++ b/src/hallelujah.tex
@@ -37,6 +37,28 @@
     \textnote{Chorus}
 
     \beginverse
+        Baby I have been here before
+        I know this room, I've walked this floor
+        I use to live alone before I knew you
+        I've seen your flag on the marble arch
+        Love is not a victory march
+        It's a cold and it's a broken Hallelujah
+    \endverse
+
+    \textnote{Chorus}
+
+    \beginverse
+        There was a time you let me know
+        What's really going on below
+        But now you never show it to me, do you?
+        And remember when I moved in you
+        The holy dove was moving too
+        And every breath we drew was Hallelujah
+    \endverse
+
+    \textnote{Chorus}
+
+    \beginverse
         You say I took the Name in vain
         I dont even know the Name
         But if I did, well really, what's it to you?
@@ -45,16 +67,5 @@
         The holy or the broken Hallelujah
     \endverse
 
-    \textnote{Chorus}
-
-    \beginverse
-        I did my best, but it wasnt much
-        I couldn't feel, so I tried to touch
-        I've told the truth, I didnt come to fool you
-        And even though it all went wrong
-        I'll stand before the Lord of song
-        With nothing on my tongue but Hallelujah
-    \endverse
-
-    \textnote{Chorus}
+    \textnote{2x Chorus}
 \endsong
